<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.lib.core.widget.BaseConstraintLayout
        android:id="@+id/top_bar_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@color/ecstasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.lib.core.widget.BaseFrameLayout
            android:id="@+id/back_frame_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="@dimen/common_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.lib.core.widget.BaseImageView
                android:id="@+id/back_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back" />
        </com.lib.core.widget.BaseFrameLayout>

        <com.lib.core.widget.BaseTextView
            android:id="@+id/hello_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/account_chinh_sua_thong_tin"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/back_frame_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/back_frame_layout" />

    </com.lib.core.widget.BaseConstraintLayout>

    <com.lib.core.widget.BaseTextView
        android:id="@+id/name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/common_16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/account_ten"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_constraint_layout" />

    <com.lib.core.widget.BaseEditText
        android:id="@+id/name_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_16dp"
        android:background="@drawable/bg_solid_transparent_stroke_black_bottom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="Azexpress"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_text_view"
        app:layout_constraintTop_toBottomOf="@id/name_text_view" />

    <com.lib.core.widget.BaseTextView
        android:id="@+id/email_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_20dp"
        android:layout_marginEnd="@dimen/common_16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/account_email"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_text_view"
        app:layout_constraintTop_toBottomOf="@id/name_edit_text" />

    <com.lib.core.widget.BaseEditText
        android:id="@+id/email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_16dp"
        android:background="@drawable/bg_solid_transparent_stroke_black_bottom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/account_default_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_text_view"
        app:layout_constraintTop_toBottomOf="@id/email_text_view" />

    <com.lib.core.widget.BaseTextView
        android:id="@+id/phone_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_20dp"
        android:layout_marginEnd="@dimen/common_16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/account_phone"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_text_view"
        app:layout_constraintTop_toBottomOf="@id/email_edit_text" />

    <com.lib.core.widget.BaseEditText
        android:id="@+id/phone_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/common_16dp"
        android:background="@drawable/bg_solid_transparent_stroke_black_bottom"
        android:fontFamily="@font/montserrat_regular"
        android:hint="+84 349 314 318"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_text_view"
        app:layout_constraintTop_toBottomOf="@id/phone_text_view" />

    <com.lib.core.widget.BaseButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/common_8dp"
        android:layout_marginBottom="@dimen/common_20dp"
        android:background="@drawable/bg_solid_transparent_stroke_ecstasy_radius_8"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/account_huy_bo"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent" />

    <com.lib.core.widget.BaseButton
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/common_16dp"
        android:background="@drawable/bg_solid_ecstaty_radius_8"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/account_luu"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintTop_toTopOf="@id/cancel_button" />
</androidx.constraintlayout.widget.ConstraintLayout>