<?xml version="1.0" encoding="utf-8"?>
<com.lib.core.widget.BaseConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <com.lib.core.widget.BaseConstraintLayout
        android:id="@+id/top_bar_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/ecstasy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.lib.core.widget.BaseTextView
            android:id="@+id/hello_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/barcode_quet_ma"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.lib.core.widget.BaseTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="@dimen/common_16dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/barcode_dat_ma"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/hello_text_view"
            app:layout_constraintTop_toBottomOf="@id/hello_text_view" />
    </com.lib.core.widget.BaseConstraintLayout>

    <!--    <SurfaceView-->
    <!--        android:id="@+id/surface_view"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/top_bar_constraint_layout" />-->


    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/scanner_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:frameAspectRatioHeight="1"
        app:frameAspectRatioWidth="1"
        app:frameColor="#F47320"
        app:frameCornersRadius="0dp"
        app:frameCornersSize="50dp"
        app:frameSize="0.75"
        app:frameThickness="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar_constraint_layout"
        app:maskColor="#000000" />


    <com.lib.core.widget.BaseTextView
        android:id="@+id/scan_barcode_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_solid_ecstaty_radius_10"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/barcode_quet_ma_ngay"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />
</com.lib.core.widget.BaseConstraintLayout>